--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -7129,6 +7129,67 @@ body {
 .pagination a {
   color: #000;
 }
+.under-title-link-container {
+  padding: 0 10px;
+}
+.under-title-link-container ul {
+  padding-left: 0;
+}
+.under-title-link-container ul > li:hover .sub-menu {
+  display: block;
+}
+.under-title-link-container ul li {
+  list-style: none;
+  position: relative;
+  float: left;
+}
+.under-title-link-container ul li a {
+  display: inline-block;
+  margin-right: 15px;
+  color: #000;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  font-family: "Novecento";
+  font-size: 13px;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+.under-title-link-container ul li .sub-menu {
+  background: #f5e8e5 none repeat scroll 0 0;
+  -webkit-box-shadow: 0 9px 18px -7px rgba(87, 84, 87, 0.7);
+          box-shadow: 0 9px 18px -7px rgba(87, 84, 87, 0.7);
+  display: none;
+  padding: 20px 30px;
+  position: absolute;
+  top: 30px;
+  z-index: 999;
+}
+.under-title-link-container ul li .sub-menu:after {
+  border-bottom: 10px solid #f5e8e5;
+  border-left: 10px solid rgba(255, 255, 255, 0);
+  border-right: 10px solid rgba(255, 255, 255, 0);
+  content: " ";
+  font-size: 0;
+  line-height: 0;
+  position: absolute;
+  top: -10px;
+  width: 0;
+}
+.under-title-link-container ul li .sub-menu li {
+  float: none;
+}
+.under-title-link-container ul li .sub-menu li a {
+  display: inline-block;
+  white-space: nowrap;
+  padding-bottom: 0;
+  font-size: 11px;
+}
+.under-title-link-container ul li .sub-menu li a.active {
+  font-weight: 500;
+}
+.under-title-link-container .social-media-container {
+  text-align: right;
+}
 @media (min-width: 768px) {
   .main {
     padding-top: 165px;
@@ -7856,15 +7917,6 @@ ul.products li.product .find-out-more {
 .stocklist-section .headline-title-container {
   margin-bottom: 20px;
 }
-.stocklist-section .stocklist-link-container {
-  padding: 0 10px;
-}
-.stocklist-section .stocklist-link-container a {
-  display: inline-block;
-  margin-right: 15px;
-  color: #000;
-  text-transform: uppercase;
-}
 .stocklist-section .stocklist-container {
   text-align: center;
   font-size: 16px;
@@ -7958,6 +8010,7 @@ ul.products li.product .find-out-more {
   padding: 2px 10px;
   font-size: 12px;
   background: #F5E8E5;
+  color: #777576;
 }
 #menu-primary-navigation > li a {
   font-family: "Novecento";
