--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -157,6 +157,73 @@ body{
 	}
 }
 
+.under-title-link-container{
+	padding:0 10px;
+	ul{
+		padding-left:0;
+		& > li{
+			&:hover{
+				.sub-menu{
+					display:block;
+				}
+			}
+		}
+		li{
+			list-style:none;
+			position:relative;
+			float:left;
+			a{
+				display:inline-block;
+				margin-right:15px;
+				color:#000;
+				text-transform:uppercase;
+				padding-bottom:20px;
+				font-family: "Novecento";
+				font-size: 13px;
+				font-weight: 300;
+				letter-spacing: 1px;
+			}
+			.sub-menu{
+				background: #f5e8e5 none repeat scroll 0 0;
+				box-shadow: 0 9px 18px -7px rgba(87, 84, 87, 0.7);
+				display: none;
+				padding: 20px 30px;
+				position: absolute;
+				top:30px;
+				z-index:999;
+				&:after{
+					border-bottom: 10px solid #f5e8e5;
+					border-left: 10px solid rgba(255, 255, 255, 0);
+					border-right: 10px solid rgba(255, 255, 255, 0);
+					content: " ";
+					font-size: 0;
+					line-height: 0;
+					position: absolute;
+					top: -10px;
+					width: 0;
+				}
+				li{
+					float:none;
+					a{
+						display:inline-block;
+						white-space: nowrap;
+						padding-bottom:0;
+						font-size:11px;
+						//font-weight:300;
+						//letter-spacing:1px;
+						&.active{
+							font-weight:500;
+						}
+					}
+				}
+			}
+		}
+	}
+	.social-media-container{
+		text-align:right;
+	}
+}
+
 //===============================================================================
 //===============================================================================
 // tablet
