--- a/wp-content/themes/evie/assets/less/main.less
+++ b/wp-content/themes/evie/assets/less/main.less
@@ -24,6 +24,7 @@
 @import "layouts/pages/_ingredient"; // Ingredient page styling
 @import "layouts/pages/_2col"; 		 // 2col template styling
 @import "layouts/pages/_stocklist";  // Stocklist template styling
+@import "layouts/pages/_testimonial";  // testimonial template styling
 @import "layouts/_posts";            // Post styling
 
 // Nav
