--- a/wp-content/themes/evie/assets/less/layouts/pages/_testimonial.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_testimonial.less
@@ -14,10 +14,12 @@
 			font-size:16px;
 			padding:40px 110px;
 			.rating-container{
-				.fa{
+				.star{
 					margin-right:5px;
-					color:#9B7E00;
-					font-size:20px;
+					display:inline-block;
+					background:url(../img/sprites/icon_star.png) no-repeat;
+					width:20px;
+					height:19px;
 				}
 			}
 			.testimonial-header{
