--- a/wp-content/themes/evie/assets/less/main.less
+++ b/wp-content/themes/evie/assets/less/main.less
@@ -33,6 +33,7 @@
 //Owl Carousel plugin
 @import "components/owl-carousel";
 @import "components/owl-theme";
+@import "components/owl-theme-default-min";
 
 //fancybox plugin
 @import "components/jquery-fancybox";
