--- a/wp-content/themes/evie/assets/less/font.less
+++ b/wp-content/themes/evie/assets/less/font.less
@@ -95,6 +95,17 @@
 }
 
 @font-face {
+  //normal
+  font-family: 'PlayfairDisplay';
+  src: url('../fonts/PlayfairDisplay-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/PlayfairDisplay-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/PlayfairDisplay-Bold.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/PlayfairDisplay-Bold.ttf')  format('truetype'); /* Safari, Android, iOS */
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
   //light
   font-family: 'Aileron';
   src: url('../fonts/Aileron-Light.eot'); /* IE9 Compat Modes */
