--- a/wp-content/themes/evie/assets/less/layouts/pages/_2col.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_2col.less
@@ -49,7 +49,7 @@
 		font-family: "PlayfairDisplay";
 		text-align:right;
 		h2{
-			font-size:46px;
+			font-size:40px;
 			margin-top:0;
 		}
 	}
@@ -93,6 +93,7 @@
 			float:none;
 			display:table-cell;
 			overflow:hidden;
+			padding-right: 40px;
 		}	
 	}
 }
