--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -84,6 +84,10 @@
 		font-weight: 300;
 		letter-spacing: 1px;
 		font-size: 13px;
+		&:hover{
+			font-weight: 500;
+			color: #000;
+		}
 	}
 	.sub-menu{
 		&>li a{
@@ -91,6 +95,11 @@
 			font-weight: 300;
 			letter-spacing: 1px;
 			font-size: 11px;
+			&:hover{
+				font-weight: 500;
+				color: #000;
+				text-decoration: none;
+			}
 		}
 		.sub-menu li a{
 			font-family: "PlayfairDisplay";
@@ -98,6 +107,11 @@
 			letter-spacing: 1px;
 			font-size: 8.5px;
 			text-transform: none;
+			&:hover{
+				font-weight: 700;
+				color: #000;
+				text-decoration: none;
+			}
 		}
 	}
 }
