--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -6964,6 +6964,16 @@ button.close {
   /* Safari, Android, iOS */
 }
 @font-face {
+  font-family: 'PlayfairDisplay';
+  src: url('../fonts/PlayfairDisplay-Bold.eot');
+  src: url('../fonts/PlayfairDisplay-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/PlayfairDisplay-Bold.woff') format('woff'), /* Pretty Modern Browsers */ url('../fonts/PlayfairDisplay-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  
+  /* IE9 Compat Modes */
+  /* Safari, Android, iOS */
+}
+@font-face {
   font-family: 'Aileron';
   src: url('../fonts/Aileron-Light.eot');
   src: url('../fonts/Aileron-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/Aileron-Light.woff2') format('woff2'), /* Super Modern Browsers */ url('../fonts/Aileron-Light.woff') format('woff'), /* Pretty Modern Browsers */ url('../fonts/Aileron-Light.ttf') format('truetype');
@@ -7068,6 +7078,13 @@ body {
   margin: 0 auto;
   float: none;
 }
+#main-content a {
+  color: #333;
+  text-decoration: underline;
+}
+.toggle_connect_link {
+  cursor: pointer;
+}
 .noPadding {
   padding: 0;
 }
@@ -7131,7 +7148,8 @@ body {
   color: #000;
 }
 .pagination a.disabled {
-  color: #999A9E;
+  /*color:#999A9E;*/
+  display: none;
 }
 .under-title-link-container {
   padding: 0 10px;
@@ -7149,7 +7167,7 @@ body {
 }
 .under-title-link-container ul li a {
   display: inline-block;
-  margin-right: 15px;
+  margin-right: 30px;
   color: #000;
   text-transform: uppercase;
   padding-bottom: 20px;
@@ -7157,6 +7175,9 @@ body {
   font-size: 13px;
   font-weight: 300;
   letter-spacing: 1px;
+}
+.under-title-link-container ul li a:hover {
+  text-decoration: none;
 }
 .under-title-link-container ul li .sub-menu {
   background: #f5e8e5 none repeat scroll 0 0;
@@ -7189,6 +7210,9 @@ body {
   font-size: 11px;
 }
 .under-title-link-container ul li .sub-menu li a.active {
+  font-weight: 500;
+}
+.under-title-link-container ul li .sub-menu li a:hover {
   font-weight: 500;
 }
 .under-title-link-container ul li .sub-menu li label {
@@ -7539,7 +7563,7 @@ footer .copyright a {
   }
 }
 .product-category-section {
-  /*margin-top:40px;*/
+  margin-top: 40px;
   text-align: center;
 }
 .product-category-section .headline-title-container {
@@ -8034,7 +8058,7 @@ ul.products li.product .find-out-more {
   text-align: right;
 }
 .contact-us .left-content h2 {
-  font-size: 46px;
+  font-size: 40px;
   margin-top: 0;
 }
 .contact-us .right-content {
@@ -8061,6 +8085,7 @@ ul.products li.product .find-out-more {
     float: none;
     display: table-cell;
     overflow: hidden;
+    padding-right: 40px;
   }
 }
 .stocklist-section .headline-title-container {
@@ -8219,11 +8244,20 @@ ul.products li.product .find-out-more {
   letter-spacing: 1px;
   font-size: 13px;
 }
+#menu-primary-navigation > li a:hover {
+  font-weight: 500;
+  color: #000;
+}
 #menu-primary-navigation .sub-menu > li a {
   font-family: "Novecento";
   font-weight: 300;
   letter-spacing: 1px;
   font-size: 11px;
+}
+#menu-primary-navigation .sub-menu > li a:hover {
+  font-weight: 500;
+  color: #000;
+  text-decoration: none;
 }
 #menu-primary-navigation .sub-menu .sub-menu li a {
   font-family: "PlayfairDisplay";
@@ -8231,6 +8265,11 @@ ul.products li.product .find-out-more {
   letter-spacing: 1px;
   font-size: 8.5px;
   text-transform: none;
+}
+#menu-primary-navigation .sub-menu .sub-menu li a:hover {
+  font-weight: 700;
+  color: #000;
+  text-decoration: none;
 }
 .language-menu a {
   font-family: "Novecento";
