--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -14,7 +14,7 @@ body{
 	padding-top:50px;
 }
 
-.breadcrumb-container{
+#main-content .breadcrumb-container{
 	background:#F5E8E5;
 	padding:10px 0;	
 	margin-bottom:10px;
@@ -32,6 +32,7 @@ body{
 		a{
 			color:#000;
 			font-weight:500;
+			text-decoration: none;
 		}
 		.fa{
 			margin:0 7px;
@@ -172,7 +173,7 @@ body{
 	}
 }
 
-.under-title-link-container{
+#main-content .under-title-link-container{
 	padding:0 10px;
 	ul{
 		padding-left:0;
@@ -197,6 +198,7 @@ body{
 				font-size: 13px;
 				font-weight: 300;
 				letter-spacing: 1px;
+				text-decoration: none;
 				&:hover{
 					text-decoration: none;
 				}
@@ -227,6 +229,7 @@ body{
 						white-space: nowrap;
 						padding-bottom:0;
 						font-size:11px;
+						text-decoration: none;
 						//font-weight:300;
 						//letter-spacing:1px;
 						&.active{
