--- a/wp-content/themes/evie/assets/less/layouts/pages/_stocklist.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_stocklist.less
@@ -20,6 +20,7 @@
 			font-family: "PlayfairDisplay";
 		}
 		.stocklist-row{
+			background: transparent url(../img/divider.gif) 50% top repeat-y;
 			.stocklist-item{
 				padding:0 50px 20px 50px;
 				h4{
@@ -29,9 +30,9 @@
 					margin-top:0;
 					margin-bottom:5px;
 				}
-				&:first-child{
-					border-right:2px solid #C9C8C8;
-				}
+				/*&:nth-child(2){
+					border-left:2px solid #C9C8C8;
+				}*/
 			}
 		}
 	}
