--- a/wp-content/themes/evie/assets/less/layouts/pages/_products.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_products.less
@@ -140,6 +140,7 @@ ul.products li.product{
 		font-family: "PlayfairDisplay";
 		font-weight: 400;
 		letter-spacing: 2px;
+		text-decoration: none;
 	}
 }
 .product-item-brief-wrapper{
