--- a/wp-content/themes/evie/assets/less/layouts/pages/_stocklist.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_stocklist.less
@@ -4,7 +4,11 @@
 //===============================================================================
 //===============================================================================
 
-.stocklist-section{	
+.stocklist-section{
+	a{
+		color:#333;
+		text-decoration: underline;
+	}
 	.headline-title-container{
 		margin-bottom:20px;
 	}
